--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -66,7 +66,7 @@ jobs:
           kind create cluster \
             --kubeconfig $KUBECONFIG \
             --config=.github/workflows/kind-config.yaml \
-            --name action
+            --name action || true
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
           kubectl cluster-info --context kind-action
