--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,8 +35,8 @@ jobs:
                   cpu: "2"
                   memory: "2000Mi"
 
-#    runs-on: [self-hosted, linux, x86, benchmark]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x86, benchmark]
+#    runs-on: ubuntu-latest
 
     container:
       image: ghcr.io/romange/benchmark-dev:latest
@@ -72,7 +72,8 @@ jobs:
             --name action || true
           curl -LO https://dl.k8s.io/release/v1.29.2/bin/linux/amd64/kubectl
           sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-          kubectl cluster-info --context kind-action --kubeconfig /github/home/.kube/config
+          docker ps -a
+          kubectl config set-cluster kind-action --server=https://action-control-plane:6443 
 
 #      - name: Create k8s Kind Cluster
 #        uses: helm/kind-action@v1.9.0
