--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,8 +35,8 @@ jobs:
                   cpu: "2"
                   memory: "2000Mi"
 
-    runs-on: [self-hosted, linux, x86, benchmark]
-#    runs-on: ubuntu-latest
+#    runs-on: [self-hosted, linux, x86, benchmark]
+    runs-on: ubuntu-latest
 
     container:
       image: ghcr.io/romange/benchmark-dev:latest
