--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -46,7 +46,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-      - name: install sude
+
+      - name: install sudo
         run: |
           apt-get update
           apt-get install sudo
