--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,10 +1,9 @@
 name: benchmark-tests
 
 on:
-  pull_request:
   workflow_dispatch:
-  #  schedule:
-#    - cron: "0 9 * * *" # run at 6 AM UTC
+  schedule:
+    - cron: "0 9 * * *" # run at 6 AM UTC
 
 
 
