used default namespace

--- a/contrib/charts/dragonfly/ci/prometheusrules-values.yaml
+++ b/contrib/charts/dragonfly/ci/prometheusrules-values.yaml
@@ -2,7 +2,7 @@ serviceMonitor:
   enabled: true
 prometheusRule:
   enabled: true
-  namespace: dragonfly
+  namespace: default
   spec:
     - alert: RedisDown
       expr: absent(dragonfly_master > 0)
