fix(ci/helm): Stick to v0.73.0 version of prom operator

--- a/.github/actions/lint-test-chart/action.yml
+++ b/.github/actions/lint-test-chart/action.yml
@@ -48,8 +48,7 @@ runs:
       - name: Install Dependencies
         shell: bash
         run: |
-          LATEST=$(curl -s https://api.github.com/repos/prometheus-operator/prometheus-operator/releases/latest | jq -cr .tag_name)
-          curl -sL https://github.com/prometheus-operator/prometheus-operator/releases/download/${LATEST}/bundle.yaml | kubectl create -f -
+          curl -sL https://github.com/prometheus-operator/prometheus-operator/releases/download/v0.73.0/bundle.yaml | kubectl create -f -
 
       - name: Getting cluster ready
         shell: bash
