--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -17,6 +17,8 @@ jobs:
 
     container:
       image: ghcr.io/romange/${{ matrix.container }}
+      options: --sysctl "net.ipv6.conf.all.disable_ipv6=0"
+
     steps:
       - uses: actions/checkout@v4
         with:
