chore: update our container distributions versions
1. Restrict build context in our dev/weekly builder to ease development iterations.
2. Switch weekly build to debian 12-slim because it's smaller than 24.04
3. Update our prod releases to use ubuntu 22.04

Signed-off-by: Roman Gershman <roman@dragonflydb.io>

--- a/tools/packaging/Dockerfile.ubuntu-dev
+++ b/tools/packaging/Dockerfile.ubuntu-dev
@@ -3,7 +3,10 @@ FROM ghcr.io/romange/ubuntu-dev:20 as builder
 
 WORKDIR /build
 
-COPY . ./
+COPY ./Makefile ./CMakeLists.txt ./
+COPY src ./src
+COPY cmake ./cmake
+COPY helio ./helio
 
 RUN make release
 
@@ -12,7 +15,7 @@ RUN build-release/dragonfly --version
 RUN curl -O https://raw.githubusercontent.com/ncopa/su-exec/212b75144bbc06722fbd7661f651390dc47a43d1/su-exec.c && \
     gcc -Wall -O2 su-exec.c -o su-exec
 
-FROM ubuntu:20.04
+FROM debian:12-slim
 
 RUN --mount=type=tmpfs,target=/var/cache/apt \
     --mount=type=tmpfs,target=/var/lib/apt/lists \
