--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: ghcr.io/romange/benchmark-dev:latest
+      image: ghcr.io/romange/ubuntu-dev:20
 
     permissions:
       id-token: write
