--- a/src/facade/CMakeLists.txt
+++ b/src/facade/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(dfly_facade conn_context.cc dragonfly_listener.cc dragonfly_connection.cc facade.cc
             memcache_parser.cc redis_parser.cc reply_builder.cc op_status.cc service_interface.cc
-            reply_capture.cc resp_expr.cc cmd_arg_parser.cc tls_error.cc)
+            reply_capture.cc resp_expr.cc cmd_arg_parser.cc tls_error.cc reply_formats.cc)
 
 if (DF_USE_SSL)
   set(TLS_LIB tls_lib)
