--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -32,6 +32,9 @@ jobs:
           cmake -B ${GITHUB_WORKSPACE}/build -DCMAKE_BUILD_TYPE=${{matrix.build-type}} -GNinja \
                 -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DPRINT_STACKTRACES_ON_SIGNAL=ON
 
+          cd $GITHUB_WORKSPACE
+          ./tools/install_wasmtime.sh
+
           cd ${GITHUB_WORKSPACE}/build  && ninja dragonfly
           pwd
           ls -l ..
