--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,7 @@ jobs:
                 git config --global --add safe.directory $(realpath $i)
               done
             fi
+            ./tools/install_wasmtime.sh
             ./tools/release.sh
             ./tools/packaging/generate_debian_package.sh ${{ env.RELEASE_DIR }}/dragonfly-aarch64
             mv dragonfly_*.deb ${{ env.RELEASE_DIR }}/
