--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,7 @@ jobs:
             -L
           cd ${GITHUB_WORKSPACE}
           ./tools/install_wasmtime.sh
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
           cd ${GITHUB_WORKSPACE}/build && pwd
           du -hcs _deps/
 
