chore: export pipeline related metrics
Export in /metrics
1. Total pipeline queue length
2. Total pipeline commands
3. Total pipelined duration

Signed-off-by: Roman Gershman <roman@dragonflydb.io>

--- a/tools/local/monitoring/docker-compose.yml
+++ b/tools/local/monitoring/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:v2.45.5
     restart: always
     volumes:
       - ./prometheus:/etc/prometheus/
