chore: don't run fetch and offload during snapshot
Signed-off-by: Vladislav Oleshko <vlad@dragonflydb.io>

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -14,12 +14,11 @@ set_property(SOURCE dfly_main.cc APPEND PROPERTY COMPILE_DEFINITIONS
              SOURCE_PATH_FROM_BUILD_ENV=${CMAKE_SOURCE_DIR})
 
 if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
-    SET(TX_LINUX_SRCS tiered_storage.cc tiering/disk_storage.cc tiering/op_manager.cc tiering/small_bins.cc
+    SET(TX_LINUX_SRCS tiering/disk_storage.cc tiering/op_manager.cc tiering/small_bins.cc
       tiering/io_mgr.cc tiering/external_alloc.cc)
 
     add_executable(dfly_bench dfly_bench.cc)
     cxx_link(dfly_bench dfly_facade fibers2 absl::random_random)
-    cxx_test(tiered_storage_test dfly_test_lib LABELS DFLY)
     cxx_test(tiering/disk_storage_test dfly_test_lib LABELS DFLY)
     cxx_test(tiering/op_manager_test dfly_test_lib LABELS DFLY)
     cxx_test(tiering/small_bins_test dfly_test_lib LABELS DFLY)
@@ -35,13 +34,18 @@ add_library(dfly_transaction db_slice.cc malloc_stats.cc blocking_controller.cc
             serializer_commons.cc journal/serializer.cc journal/executor.cc journal/streamer.cc
             ${TX_LINUX_SRCS} acl/acl_log.cc slowlog.cc)
 
-SET(SEARCH_FILES search/search_family.cc search/doc_index.cc search/doc_accessors.cc
+SET(DF_SEARCH_SRCS search/search_family.cc search/doc_index.cc search/doc_accessors.cc
     search/aggregator.cc)
+
+if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+  SET(DF_LINUX_SRCS tiered_storage.cc)
+
+  cxx_test(tiered_storage_test dfly_test_lib LABELS DFLY)
+endif()
 
 add_library(dragonfly_lib bloom_family.cc engine_shard_set.cc channel_store.cc
             config_registry.cc conn_context.cc debugcmd.cc dflycmd.cc
             generic_family.cc hset_family.cc http_api.cc json_family.cc
-            ${SEARCH_FILES}
             list_family.cc main_service.cc memory_cmd.cc rdb_load.cc rdb_save.cc replica.cc
             protocol_client.cc
             snapshot.cc script_mgr.cc server_family.cc malloc_stats.cc
@@ -49,8 +53,10 @@ add_library(dragonfly_lib bloom_family.cc engine_shard_set.cc channel_store.cc
             detail/snapshot_storage.cc
             set_family.cc stream_family.cc string_family.cc
             zset_family.cc version.cc bitops_family.cc container_utils.cc io_utils.cc
-            top_keys.cc multi_command_squasher.cc hll_family.cc cluster/cluster_config.cc
-            cluster/cluster_family.cc cluster/incoming_slot_migration.cc
+            top_keys.cc multi_command_squasher.cc hll_family.cc
+            ${DF_SEARCH_SRCS}
+            ${DF_LINUX_SRCS}
+            cluster/cluster_config.cc cluster/cluster_family.cc cluster/incoming_slot_migration.cc
             cluster/outgoing_slot_migration.cc cluster/cluster_defs.cc
             acl/user.cc acl/user_registry.cc acl/acl_family.cc
             acl/validator.cc acl/helpers.cc)
