Revert "refactor client tracking, fix atomicity, squashing and multi/exec (#2970)"
This reverts commit b1063f7823d33c220ffe712ac1d5c31a6614243a.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -33,7 +33,8 @@ add_library(dfly_transaction db_slice.cc malloc_stats.cc blocking_controller.cc
             common.cc journal/journal.cc journal/types.cc journal/journal_slice.cc
             server_state.cc table.cc  top_keys.cc transaction.cc tx_base.cc
             serializer_commons.cc journal/serializer.cc journal/executor.cc journal/streamer.cc
-            ${TX_LINUX_SRCS} acl/acl_log.cc slowlog.cc)
+            ${TX_LINUX_SRCS} acl/acl_log.cc slowlog.cc
+            )
 
 SET(SEARCH_FILES search/search_family.cc search/doc_index.cc search/doc_accessors.cc
     search/aggregator.cc)
