fix(ci): docker not using iouring

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -37,6 +37,7 @@ jobs:
 
     container:
       image: ghcr.io/romange/benchmark-dev:latest
+      options: --security-opt seccomp=unconfined
 
     permissions:
       id-token: write
