--- a/.github/workflows/bullmq-tests.yml
+++ b/.github/workflows/bullmq-tests.yml
@@ -11,6 +11,7 @@ jobs:
     timeout-minutes: 60
     container:
       image: ghcr.io/romange/alpine-dev:latest
+      options: --security-opt seccomp=unconfined
       credentials:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
