--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,7 @@ jobs:
             container: fedora:30
     container:
       image: ghcr.io/romange/${{ matrix.container }}
+      options: --security-opt seccomp=unconfined
       options: --sysctl "net.ipv6.conf.all.disable_ipv6=0"
     steps:
     - uses: actions/checkout@v4
