chore: upload all the logs from /tmp
Signed-off-by: Roman Gershman <roman@dragonflydb.io>

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: logs
-          path: /tmp/failed/*
+          path: /tmp/dragonfly.*
 
   lint-test-chart:
     runs-on: ubuntu-latest
