chore: print effective QPS of the server.
Also refactor ReceiveFB into multiple functions.
Finally, fix the memcached command in local monitoring stack.

Signed-off-by: Roman Gershman <roman@dragonflydb.io>

--- a/tools/local/monitoring/docker-compose.yml
+++ b/tools/local/monitoring/docker-compose.yml
@@ -39,10 +39,7 @@ services:
     restart: unless-stopped
     ports:
       - "11211:11211"
-    command:
-      - '-t 8'
-      - '-m 10000'
-      - '--pidfile=/memcached/memcached.pid'
+    command: "-t 8 -m 10000 -c 10000 --pidfile=/memcached/memcached.pid"
     pid: host
     volumes:
       - memcached_data:/memcached
