fix(json_family): Test case when jsonpathv2 is false
Signed-off-by: Stepan Bagritsevich <bagr.stepan@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,7 @@ jobs:
           ./dragonfly_test
           ./multi_test --multi_exec_mode=1
           ./multi_test --multi_exec_mode=3
+          ./json_family_test --jsonpathv2=false
 
       - name: Upload unit logs on failure
         if: failure()
